Edicion css y js tarjetas

--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
             <div class="coleccion">
                 <div class="tarjetas">
                     <div class="tarjeta" id="tarjeta1"></div>
+                    <div class="tarjeta hidden" id="tarjeta1back"></div>
                     <div class="tarjeta" id="tarjeta2"></div>
+                    <div class="tarjeta hidden" id="tarjeta2back">Salon de recepciones Leidy <br> Crr 72a 72-23 <br> Santa Maria del Lago</div>
                     <div class="tarjeta" id="tarjeta3"></div>
+                    <div class="tarjeta hidden" id="tarjeta3back">23 de Septiembre</div>
                     <div class="tarjeta" id="tarjeta4"></div>
+                    <div class="tarjeta hidden" id="tarjeta4back">7 pm</div>
                 </div>
                 <div class="cajaBoton">
                     <button id="nueva-verificacion-btn" class="boton" role="button">Nuevo Código</button>
@@ -36,8 +40,12 @@
 
         <div id="pagina-invalido" class="hidden invalido">
             <div class="coleccion">
-                <div class="tarjeta" id="tarjetaError"></div>
-                <button id="nueva-verificacion-btn2" class="boton" role="button">Nuevo Código</button>
+                <div class="tarjetas">
+                    <div class="tarjeta" id="tarjetaError"></div>
+                </div>
+                <div class="cajaBoton">
+                    <button id="nueva-verificacion-btn2" class="boton" role="button">Nuevo Código</button>
+                </div>
             </div>
         </div>
     </main>
