--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <div id="pagina-inicio" class="inicio">
             <h1>Bienvenidos</h1>
             <div class="caja-input">
-                <input type="text" id="codigo-input" class="input" placeholder="Ingresa tu código" maxlength="5">
+                <input type="text" id="codigo-input" class="input" placeholder="Ingresa tu código" maxlength="6">
                 <button id="verificar-btn" class="boton" role="button">Entrar</button>
             </div>
         </div>
 
         <div id="pagina-resultado" class="hidden resultado">
             <div class="coleccion">
+                <div class="header">
+                    <h1 id="titulo"></h1>
+                </div>
                 <div class="tarjetas-grid">
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
@@ -29,23 +32,24 @@
                             <div class="atras" id="tarjeta1back"></div>
                         </div>
                     </div>
+                    <a href="https://goo.gl/maps/neibo2SUnbgRzpeT6" target="_blank" >
+                        <div class="tarjeta">
+                            <div class="tarjeta-inner">
+                                <div class="frente sobre">Lugar</div>
+                                <div class="atras sobre vinculo">Recepciones Leidy <br> Crr 72a 72-23</div>
+                            </div>
+                        </div>
+                    </a>
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
-                            <div class="frente">Lugar</div>
-                            <div class="atras">Salon de recepciones Leidy <br> Crr 72a 72-23
-                                <br> Santa Maria del Lago </div>
+                            <div class="frente">Fecha y hora</div>
+                            <div class="atras">23 de Septiembre<br>7pm</div>
                         </div>
                     </div>
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
-                            <div class="frente">Fecha</div>
-                            <div class="atras">23 de Septiembre</div>
-                        </div>
-                    </div>
-                    <div class="tarjeta">
-                        <div class="tarjeta-inner">
-                            <div class="frente">Hora</div>
-                            <div class="atras">7 pm</div>
+                            <div class="frente">Número de invitaciones</div>
+                            <div class="atras" id="tarjeta4back"></div>
                         </div>
                     </div>
                 </div>
