cambio fuentes y otras mejoras

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Nuestros 15</title>
     <link rel="stylesheet" href="estilo.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
         <div id="pagina-resultado" class="hidden resultado">
             <div class="coleccion">
                 <div class="header">
-                    <h1 id="titulo"></h1>
+                    <h1 id="titulo" class="titulo-2"></h1>
                 </div>
                 <div class="tarjetas-grid">
                     <div class="tarjeta">
@@ -32,7 +35,7 @@
                             <div class="atras" id="tarjeta1back"></div>
                         </div>
                     </div>
-                    <a href="https://goo.gl/maps/neibo2SUnbgRzpeT6" target="_blank" >
+                    <a href="https://goo.gl/maps/neibo2SUnbgRzpeT6" target="_blank">
                         <div class="tarjeta">
                             <div class="tarjeta-inner">
                                 <div class="frente sobre">Lugar</div>
