--- a/index.html
+++ b/index.html
@@ -31,36 +31,41 @@
                 <div class="tarjetas-grid">
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
-                            <div class="frente" id="tarjeta1"></div>
+                            <div class="frente"><img class="icono" src="info/confeti.png" alt="Fecha y hora" /></div>
                             <div class="atras" id="tarjeta1back"></div>
                         </div>
                     </div>
                     <a href="https://goo.gl/maps/neibo2SUnbgRzpeT6" target="_blank">
                         <div class="tarjeta">
                             <div class="tarjeta-inner">
-                                <div class="frente sobre">Lugar</div>
-                                <div class="atras sobre vinculo">Recepciones Leidy <br> Crr 72a 72-23</div>
+                                <div class="frente sobre"><img class="icono" src="info/localizacion.png"
+                                        alt="Ubicacion Recepciones Leidy" />
+                                </div>
+                                <div class="atras sobre">Recepciones Leidy <br> Crr 72a 72-23</div>
                             </div>
                         </div>
                     </a>
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
-                            <div class="frente">Fecha y hora</div>
+                            <div class="frente"><img class="icono" src="info/time-and-date.png" alt="Fecha y hora" />
+                            </div>
                             <div class="atras">23 de Septiembre<br>7pm</div>
                         </div>
                     </div>
                     <div class="tarjeta">
                         <div class="tarjeta-inner">
-                            <div class="frente">Número de invitaciones</div>
+                            <div class="frente"><img class="icono" src="info/etiqueta.png" alt="Fecha y hora" /></div>
                             <div class="atras" id="tarjeta4back"></div>
                         </div>
                     </div>
                 </div>
+
                 <div class="cajaBoton">
                     <button id="nueva-verificacion-btn" class="boton" role="button">Nuevo Código</button>
                 </div>
             </div>
         </div>
+        
 
         <div id="pagina-invalido" class="hidden invalido">
             <div class="coleccion">
