--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
                             <div class="atras" id="tarjeta4back"></div>
                         </div>
                     </div>
+                    <div class="tarjeta">
+                        <div class="tarjeta-inner">
+                            <div class="frente"><img class="icono" src="info/ropa2.png" alt="Codigo Vestimenta" /></div>
+                            <div class="atras">Formal</div>
+                        </div>
+                    </div>
+                    <div class="tarjeta">
+                        <div class="tarjeta-inner">
+                            <div class="frente"><img class="icono" src="info/regalo.png" alt="Lluvia de sobres" /></div>
+                            <div class="atras" >Lluvia de sobres</div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="cajaBoton">
